# pjc

./: .swp  CMakeLists.txt  a.out  connect4  main  main.c
lan/: file.c  main.c  struct.c
res/: osebe.txt  slovenija.txt  tocke1.txt  tocke2.txt  wc_test.txt
src/: 00_zapiski.c  01_fibo.c  01_izpis.c  02_obratno.c  02_pretvorba.c  03_igra.c  03_stevke.c  04_bitki.c  04_wc.c  05_histogram.c  05_tocke.c  06_sklad.c  06_testSklada.c  07_imenik.c  08_seznam.c
